# struct2bim

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-training.txt
blender/scripts/: render_clean_drawing.py  render_ifc_manifest.py
config/: tools.example.toml
configs/curricula/: reference.yaml
configs/rulesets/: reference.yaml
configs/training/: columns-obb.yaml  columns-seg.yaml
docs/: architecture.md  data-contract.md  limitations.md  training.md  verification.md
examples/reference/: README.md  model.dxf  model.ifc  structural_scene.json  verification_report.json
examples/reference/dataset_sample/: metadata.json  obb.txt  segmentation.txt
scripts/: bootstrap.ps1  release_audit.py  verify_environment.py
src/struct2bim/: __init__.py  cli.py  diagnostics.py  inputs.py
src/struct2bim/annotations/: __init__.py  exporters.py  records.py
src/struct2bim/application/: __init__.py  dataset.py
src/struct2bim/augmentation/: __init__.py  annotations.py  document.py
src/struct2bim/curriculum/: __init__.py  generator.py  manifest.py  splits.py
src/struct2bim/domain/: __init__.py  entities.py  errors.py  geometry.py  provenance.py  scene.py
src/struct2bim/exporters/: __init__.py  dxf.py  ifc.py
src/struct2bim/rendering/: __init__.py  blender_runner.py  ifc_manifest.py  previews.py
src/struct2bim/showcase/: __init__.py  builder.py  composition.py  dataset_preview.py
src/struct2bim/training/: __init__.py  config.py  evaluation.py  inference.py  runner.py
src/struct2bim/validation/: __init__.py  canonical.py  dataset.py
src/struct2bim/web/: __init__.py  app.py
src/struct2bim/web/static/: app.js  index.html  style.css
tests/: test_annotations.py  test_augmentation.py  test_cli.py  test_curriculum.py  test_dataset_builder.py  test_dataset_validation.py  test_diagnostics.py  test_domain.py  test_dxf.py  test_ifc.py  test_inference.py  test_inputs.py  test_package.py  test_rendering.py  test_showcase.py  test_training.py  test_validation.py  test_web.py
