[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "struct2bim"
version = "0.1.0"
description = "Synthetic structural drawing datasets and BIM/IFC generation tools."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "albumentations==1.4.24",
  "ezdxf==1.3.5",
  "ifcopenshell==0.8.0",
  "networkx==3.4.2",
  "numpy==2.2.1",
  "opencv-python-headless==4.10.0.84",
  "pillow==11.0.0",
  "pydantic==2.10.4",
  "pymupdf==1.25.1",
  "pyyaml==6.0.2",
  "rich==13.9.4",
  "shapely==2.0.6",
  "typer==0.15.1",
]

[project.optional-dependencies]
dev = [
  "mypy==1.14.0",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "ruff==0.8.4",
]

[project.scripts]
struct2bim = "struct2bim.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/struct2bim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

